--- a/docker-compose-cockroach.yml
+++ b/docker-compose-cockroach.yml
@@ -19,10 +19,9 @@ services:
     environment:
       SPRING_APPLICATION_JSON: '{
           "spring.profiles.active":"default,cockroach",
-          "spring.datasource.url"  : "jdbc:postgresql://16-bits-cockroach:26257/defaultdb?sslmode=disable&user=root"
-      }'
-  16-bits-front-end:
+          "spring.datasource.url"  : "jdbc:postgresql://16-bits-cockroach:26257/defaultdb?sslmode=disable&user=root"}''
+    
+        16-bits-front-end:
     image: "16bits/zero2hero-fe:0.0.3"
     container_name: 16-bits-front-end
-    ports:
-      - "3000:3000"
+    ports:"3000:3000"''
